Fix issue #3 - cropped images on SOM

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,7 +159,7 @@ height: calc(100% / (64 / 8));
 }
 
 .frame-in-grid {
-background-size: cover;
+background-size: 100% 100%;
 cursor: pointer;
 font-size: 0px;
 position: relative;
